<resources>
    <string name="app_name">Home Screen Arcade</string>
    <string name="invaders_title">Invaders</string>
    <string name="block_drop_title">Block Drop</string>
    <string name="mazeman_title">Maze-Man</string>
    <string name="pinball_title">Pinball</string>
    <string name="fire_btn">Fire Button</string>
    <string name="dpad">Control Pad</string>
    <string name="up_down">Up/Down Controls</string>
    <string name="left_right">Left/Right Controls</string>
    <string name="score">Score: %1$d</string>
    <string name="level">Level %1$d</string>
    <string name="get_ready">Ready Player One</string>
    <string name="pause_game">Pause game</string>
    <string name="already_paused">(Game already paused)</string>
    <string name="play_game">Play game</string>
    <string name="already_playing">(Game already playing)</string>
    <string name="instr_preamble">This game requires the following Home Screen Arcade widgets to play:</string>
    <string name="instr_conclusion">Add these to a home screen panel and you\'ll be good to go!</string>
    <string name="launcher_preamble">Using a combination of live wallpapers, widgets, and notifications, Home Screen Arcade is a game platform that runs entirely on your home screen.
        \n\nTo get started, go back to your home screen, and set a Home Screen Arcade live wallpaper.</string>
    <string name="credits">Credits</string>
    <string name="invaders_credits">Invaders is adapted from Android Space Invaders (https://sourceforge.net/projects/droidspceinvdrs) under the GNU General Public License 3.0</string>
    <string name="blockdrop_credits">Block Drop is adapted from Blockinger (https://github.com/vocollapse/Blockinger) under the GNU General Public License 3.0</string>
    <string name="mazeman_credits">Maze-Man is adapted from Pac-Mon (https://code.google.com/archive/p/game-pacmon) under the Apache License 2.0</string>
    <string name="pinball_credits">Pinball is adapted from Vector Pinball (https://github.com/dozingcat/Vector-Pinball) under the GNU General Public License 3.0</string>
    <string name="button_credits">The button image is used with the gracious permission of Colin O\'Dell: https://play.google.com/store/apps/developer?id=Colin+O%27Dell</string>
    <string name="hsa_about">Home Screen Arcade itself is copyright 2017 Sterling Udell, and is distributed under the terms of the GNU General Public License 3.0. Source code is available at https://github.com/StringMon/homescreenarcade</string>

    <!-- Vector Pinball -->
    <string name="independent_flippers_pref_title">Independent Flippers</string>
    <string name="independent_flippers_pref_summary_on">A touch activates the flippers on the same side of the screen</string>
    <string name="independent_flippers_pref_summary_off">Any touch activates all flippers</string>

    <string name="high_quality_pref_title">High Quality</string>
    <string name="high_quality_pref_summary_on">Higher quality but slower graphics</string>
    <string name="high_quality_pref_summary_off">Lower quality but faster graphics</string>

    <string name="sound_pref_title">Sound</string>
    <string name="music_pref_title">Background Music</string>
    <string name="show_fps_pref_title">Show FPS</string>
    <string name="zoom_pref_title">Zoom Playfield</string>
    <string name="use_opengl_pref_title">OpenGL Rendering</string>

    <string name="about_text" translatable="false">Vector Pinball 1.5.6\n© 2010-2016 Brian Nenninger\nMore info: www.vectorpinball.com\nComments and bug reports: brian@vectorpinball.com\n\nTouch the screen to start a new game, launch a ball if one is not in play, and activate the flippers. Touch the score area to pause the game.\n\n[TABLE_RULES]\n\nSelecting the Preferences button or menu item allows you to change the following settings:\n- Sound: Enables and disables sound effects\n- Background Music: Enables and disabled background music\n- Independent Flippers: When unchecked, any touch activates both flippers. When checked, you must touch the left side of the screen for the left flipper, and the right side for the right flipper.\n- Zoom: When checked, the view will be zoomed on the ball\'s location during game play.\n- OpenGL Rendering: Uses OpenGL to draw graphics. This improves performance on many devices, but slows down some.\n- Show FPS: When checked, shows frames drawn per second in the upper left.\n\nVector Pinball is open source; the code is at https://github.com/dozingcat/Vector-Pinball\n\nThanks to Mario at www.badlogicgames.com for code improvements and libgdx.\n\nsound, music, &amp; audio code, by pdx\nTwittering Machine\nhttp://www.twittering.com</string>

    <string name="table1_rules" translatable="false">Table Rules:\n- Light all the cyan rollovers in the top or bottom lanes to advance the score multiplier. All points you earn will be multiplied by this amount. Shooting the left ramp will also advance the multiplier.\n- The game starts with ball savers in the left and right outlanes, which disappear when used. Hit all drop targets on the left or right side to restore them.\n- Hitting any group of drop targets will activate the next light in the center of the field. When the large white central light is activated, shoot the left ramp to start multiball.</string>
    <string name="table2_rules" translatable="false">Table Rules:\n- Light all the cyan rollovers in the bottom lanes to advance the score multiplier. All points you earn will be multiplied by this amount. \n- The game starts with ball savers in the left and right outlanes, which disappear when used. Hit all drop targets on the left or right side to restore them.\n- The circles in the middle of the field keep track of how many times you\'ve hit all the left, upper, and right drop targets. When all of them have been hit at least 3 times, shoot the red bumper in the upper right to start multiball.</string>
    <string name="table3_rules" translatable="false">Table Rules:\n- Light all the cyan rollovers in the bottom lanes to advance the score multiplier. All points you earn will be multiplied by this amount. \n- The game starts with ball savers in the left and right outlanes, which disappear when used. Hit all drop targets on the left or right side to restore them.\n- Shooting either ramp with turn the bumpers red, and they will change back to blue over several seconds. Hit them during this time for extra points.\n- Turn the middle rings red by hitting the bumpers, and the middle sets of drop targets. When all the rings are red, shoot either ramp to start multiball.</string>
    <string name="table4_rules" translatable="false">Table Rules:\n- Each bumper increases the score multiplier by 0.01x. Shooting the top drop targets or lighting all the lane rollovers will increase this amount.\n- Shoot all six bumpers to light the center indicators. When all indicators for a row are lit, shoot the right hole to lock the ball for multiball.\n- Multiball starts when you lock three balls. During multiball, the center indicators will light up when a ball crosses over them. Light them all to score a jackpot.\n- The game starts with ball savers in the left and right outlanes, which disappear when used. Hit all drop targets on the left or right side to restore them.</string>
    <string name="table5_rules" translatable="false">Table Rules:\n- The central circle has twelve points around it, 3 each of 4 colors. Shooting a top ramp will change the color of the ball and allow it to activate the points with matching color.\n- When all 12 points around the circle are activated, hitting the edges of the rotating triangle will remove them. Shoot the target in the middle of the triangle to start multiball.\n- During multiball, light the 12 circle points again to score a jackpot, which increases in value each time.\n- The game starts with ball savers in the left and right outlanes, which disappear when used. Hit all drop targets on the left or right side to restore them.</string>

    <string name="change_table_button_label">Change Table</string>
    <string name="help_button_label">Help</string>
    <string name="preferences_button_label">Preferences</string>
    <string name="end_game_button_label">End Game</string>
    <string name="unlimited_balls_label">Unlimited Balls</string>
</resources>
