<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000"
            android:padding="16dp">
    <LinearLayout
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/preamble"
            android:textAppearance="@style/Medium"
            android:text="@string/launcher_preamble"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/invaders"
            android:text="@string/invaders_title"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/block_drop"
            android:text="@string/block_drop_title"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mazeman"
            android:text="@string/mazeman_title"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pinball"
            android:text="@string/pinball_title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/credits"
            android:textAppearance="@style/Large"
            android:text="@string/credits"
            android:layout_marginTop="8dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Medium"
            android:text="@string/invaders_credits"
            android:autoLink="web"
            style="@style/Bullet"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Medium"
            android:text="@string/blockdrop_credits"
            android:autoLink="web"
            style="@style/Bullet"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Medium"
            android:text="@string/mazeman_credits"
            android:autoLink="web"
            style="@style/Bullet"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Medium"
            android:text="@string/pinball_credits"
            android:autoLink="web"
            style="@style/Bullet"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Medium"
            android:text="@string/button_credits"
            android:autoLink="web"
            style="@style/Bullet"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Medium"
            android:text="@string/hsa_about"
            android:autoLink="web"
            />
    </LinearLayout>
</ScrollView>
