<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools"
           tools:targetApi="n_mr1">
    <shortcut
        android:shortcutId="pause"
        android:enabled="true"
        android:icon="@drawable/ic_pause_shortcut"
        android:shortcutShortLabel="@string/pause_game"
        android:shortcutDisabledMessage="@string/already_paused">
        <intent
            android:action="com.homescreenarcade.PAUSE"
            android:targetPackage="com.homescreenarcade" />
    </shortcut>
    <shortcut
        android:shortcutId="play"
        android:enabled="true"
        android:icon="@drawable/ic_play_shortcut"
        android:shortcutShortLabel="@string/play_game"
        android:shortcutDisabledMessage="@string/already_playing">
        <intent
            android:action="com.homescreenarcade.PAUSE"
            android:targetPackage="com.homescreenarcade" />
    </shortcut>
</shortcuts>
